--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,18 @@
-fastapi==0.95.2
-uvicorn==0.22.0
-pydantic==1.10.8
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.4.2
 python-dotenv==1.0.0
-httpx>=0.24.0,<0.25.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
-supabase==2.0.3
 python-jose==3.3.0
 passlib==1.7.4
-python-multipart==0.0.6
 bcrypt==4.0.1
+python-multipart==0.0.6
+httpx>=0.24.0,<0.25.0
+email-validator==2.1.0
+supabase==1.2.0
+uuid==1.30
+contextvars==2.4
+pydantic-settings==2.0.3
+slowapi==0.1.8
+pytest==7.4.3
+pytest-asyncio==0.21.1
 resend==0.6.0 
