--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "private": true,
   "devDependencies": {
     "concurrently": "^9.1.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "node-fetch": "^3.3.2"
   }
 }
