--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "concurrently": "^9.1.2"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^2.7.0"
   }
 }
